--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,15 @@
-wheel
-torch
-pandas
-matplotlib
-networkx
+cycler==0.10.0
+decorator==4.4.2
+future==0.18.2
+kiwisolver==1.2.0
+matplotlib==3.3.0
+networkx==2.4
+numpy==1.19.1
+pandas==1.1.0
+Pillow==7.2.0
+pkg-resources==0.0.0
+pyparsing==2.4.7
+python-dateutil==2.8.1
+pytz==2020.1
+six==1.15.0
+torch==1.6.0
