--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 cycler==0.10.0
 decorator==4.4.2
 future==0.18.2
+joblib==0.16.0
 kiwisolver==1.2.0
 matplotlib==3.3.0
 networkx==2.4
@@ -11,5 +12,9 @@ pkg-resources==0.0.0
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2020.1
+scikit-learn==0.23.2
+scipy==1.5.2
 six==1.15.0
+sklearn==0.0
+threadpoolctl==2.1.0
 torch==1.6.0
